z-index issues fix

--- a/client/src/scss/PostOptModal.scss
+++ b/client/src/scss/PostOptModal.scss
@@ -6,7 +6,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 3;
+  z-index: 5;
   border-radius: 10px;
 
   button {
