--- a/client/src/scss/ProfileOptModal.scss
+++ b/client/src/scss/ProfileOptModal.scss
@@ -8,7 +8,7 @@
   transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  z-index: 3;
+  z-index: 5;
   border-radius: 10px;
 
   button {
